docker_and_kuber/less07/service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  selector:
    app: prometheus
  type: NodePort  
  ports:
    - port: 9090
      targetPort: 9090
      nodePort: 30015
